--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,12 +1,19 @@
-{% extends "base.html" %}
 {% load crispy_forms_tags %}
-{% block title %} Sing Up {% endblock title %}
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content bg-dark text-light" >
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Create User</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="userCreationForm" method="post" hx-post="{% url 'signup' %}">
+          {% csrf_token %}
+          {{ form|crispy }}
+          <button type="submit" class="btn btn-primary">Create</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 
-{% block content %}
-<h2>Sign Up</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form | crispy }}
-    <button type="submit" class="btn btn-success"> Sign Up </button>
-</form>
-{% endblock content %}
