add the second step of the modal (user_profile)

--- a/templates/settings/employee/employee.html
+++ b/templates/settings/employee/employee.html
@@ -55,7 +55,7 @@ th {
   </div>
   <div class="mt-3 mb-3">
     <button hx-get="{% url 'create_user' %}" hx-target="#dialog" class="btn btn-primary">
-      Add a movie
+      Add Employee
     </button>
 
     <div id="modal" class="modal fade">
