--- a/templates/settings/employee/employee.html
+++ b/templates/settings/employee/employee.html
@@ -7,51 +7,9 @@ th {
   
 
 <div class="h-100">
-  <div class='row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3'>
-    <div class="col mb-3">
-      <div class="card bg-dark pb-2" style="border-left: 3px solid #28a745;">
-          <div class="card-body text-white fs-5 ">
-            <h5 class="card-title text-success m-0">Online</h5>
-            <div class='d-flex justify-content-between pt-2'>
-              <p class="card-text ps-2"> {{ online }} </p>
-              <i class="fs-4 fa-solid fa-signal-bars" style="--fa-primary-color: #ffffff; --fa-secondary-color: #ffffff;"></i>
-            </div>
-          </div>
-      </div>
-    </div>
-    <div class="col mb-3">
-      <div class="card bg-dark pb-2" style="border-left: 3px solid #28a745;">
-          <div class="card-body text-white fs-5 ">
-            <h5 class="card-title text-success m-0">Activte</h5>
-            <div class='d-flex justify-content-between pt-2'>
-              <p class="card-text ps-2"> {{ active }} </p>
-              <i class="fs-4 fa-solid fa-check" style="color: #ffffff;"></i>
-            </div>
-          </div>
-      </div>
-    </div>
-    <div class="col mb-3">
-      <div class="card bg-dark pb-2" style="border-left: 3px solid #DC4C64;">
-          <div class="card-body text-white fs-5 ">
-            <h5 class="card-title text-danger m-0">Offline</h5>
-            <div class='d-flex justify-content-between pt-2'>
-              <p class="card-text ps-2"> {{ offline }} </p>
-              <i class="fs-4 fa-solid fa-signal-slash" style="--fa-primary-color: #ffffff; --fa-secondary-color: #ffffff;"></i>
-            </div>
-          </div>
-      </div>
-    </div>
-    <div class="col mb-3">
-      <div class="card bg-dark pb-2" style="border-left: 3px solid #DC4C64;">
-          <div class="card-body text-white fs-5 ">
-            <h5 class="card-title text-danger m-0">Inactive</h5>
-            <div class='d-flex justify-content-between pt-2'>
-              <p class="card-text ps-2"> {{ inactive }} </p>
-              <i class="fs-4 fa-solid fa-xmark" style="color: #ffffff;"></i>
-            </div>
-          </div>
-      </div>
-    </div>
+  <div 
+    hx-trigger="load, cards from:body" hx-get="{% url 'cards' %}" hx-target="this"
+    id='cards' class='row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3'>
   </div>
   <div class="mt-3 mb-3">
     <button hx-get="{% url 'create_user' %}" hx-target="#dialog" class="btn btn-primary">
