create the employee info page and fix some error

--- a/templates/settings/employee/employee.html
+++ b/templates/settings/employee/employee.html
@@ -69,6 +69,13 @@ th {
 </style>
 
 <script>
+if (typeof modal !== 'undefined' && modal) {
+    modal.dispose(); // Remove the existing modal
+}
+
+// Define the modal
+var modal = new bootstrap.Modal(document.getElementById("modal"));
+
 var sortOrders = []; // array to store sort orders for each column
 
 function sortTable(columnIndex) {
@@ -119,26 +126,25 @@ function sortTable(columnIndex) {
     }
 }
 
-const modal = new bootstrap.Modal(document.getElementById("modal"))
 
 htmx.on("htmx:afterSwap", (e) => {
   // Response targeting #dialog => show the modal
   if (e.detail.target.id == "dialog") {
-    modal.show()
+    modal.show();
   }
-})
+});
 
 htmx.on("htmx:beforeSwap", (e) => {
   // Empty response targeting #dialog => hide the modal
   if (e.detail.target.id == "dialog" && !e.detail.xhr.response) {
-    modal.hide()
-    e.detail.shouldSwap = false
+    modal.hide();
+    e.detail.shouldSwap = false;
   }
-})
+});
 
 htmx.on("hidden.bs.modal", () => {
-  document.getElementById("dialog").innerHTML = ""
-})
+  document.getElementById("dialog").innerHTML = "";
+});
 
 window.addEventListener('DOMContentLoaded', (event) => {
     // Delay autofocus by 500 milliseconds (adjust the delay as needed)
@@ -146,6 +152,5 @@ window.addEventListener('DOMContentLoaded', (event) => {
         document.querySelector('#elementToFocus').focus();
     }, 500);
 });
-
 </script>
 
