--- a/templates/settings/employee/employee_detail.html
+++ b/templates/settings/employee/employee_detail.html
@@ -2,21 +2,18 @@
     <li class="nav-item" role="presentation">
         <button
           style='color: #6c7293;'
-          hx-get="{% url 'info' %}" hx-target="#home"
           class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" 
           type="button" role="tab" aria-controls="home" aria-selected="true">Info</button>
     </li>
     <li class="nav-item" role="presentation">
         <button
           style='color: #6c7293;'
-          hx-get="{% url 'log' %}" hx-target="#profile"
           class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" 
           type="button" role="tab" aria-controls="profile" aria-selected="false">Login</button>
     </li>
     <li class="nav-item" role="presentation">
         <button 
           style='color: #6c7293;'
-          hx-get="{% url 'permissions' %}" hx-target="#contact"
           class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" 
           type="button" role="tab" aria-controls="contact" aria-selected="false">Permissions</button>
     </li>
@@ -25,6 +22,10 @@
     <div class="tab-pane fade show active mt-4 h-100" id="home" role="tabpanel" aria-labelledby="home-tab">
       {% include "settings/employee/tabs/info.html" %}
     </div>
-    <div class="tab-pane fade mt-4" id="profile" role="tabpanel" aria-labelledby="profile-tab"></div>
-    <div class="tab-pane fade mt-4" id="contact" role="tabpanel" aria-labelledby="contact-tab"></div>
+    <div class="tab-pane fade mt-4" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+      {% include "settings/employee/tabs/log.html" %}
+    </div>
+    <div class="tab-pane fade mt-4" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+      {% include "settings/employee/tabs/permissions.html" %}
+    </div>
 </div>
