--- a/templates/settings/employee/tabs/info.html
+++ b/templates/settings/employee/tabs/info.html
@@ -1,18 +1,67 @@
-<div style="height: 90%" class="d-flex flex-column justify-content-between text-center text-white">
-  <div class="d-flex justify-content-between h-50">
-    <div class="h-75 border rounded p-2" style='width: 45%'>
-      <h1>User</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="bg-white p-4 mt-4 rounded " style="height: 95%">
+        <h5 class="">User Information</h5>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">First Name: {{ user.user.first_name }}</li>
+          <li class="list-group-item">Last Name: {{ user.user.last_name }}</li>
+          <li class="list-group-item">User Name: {{ user.user.username }}</li>
+          <li class="list-group-item">Email: {{ user.user.email }}</li>
+          <li class="list-group-item">Active:
+            {% if user.user.is_active %}
+              <i class="far fa-check-circle" style="color: #63E6BE;"></i>
+            {% else %}
+              <i class="far fa-times-circle" style="color: #ff0000;"></i> 
+            {% endif %}
+          </li>
+        </ul> 
+        <a
+          hx-get="{% url 'create_user' %}" hx-target="#dialog"
+          href="#" class="btn btn-primary mt-3">
+          Edit
+        </a>
+        <div id="modal" class="modal fade">
+          <div id="dialog" class="modal-dialog" hx-target="this"></div>
+        </div>
+      </div>
     </div>
-    <div class="h-75 border rounded p-2" style='width: 45%'>
-      <h1>User Profile</h1>
+    <div class="col-md-6">
+      <div class="bg-white p-4 mt-4 rounded " style="height: 95%">
+        <h5 class="card-title">Profile Information</h5>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Job Title: {{ user.job_title.name }}</li>
+          <li class="list-group-item">City: {{ user.city.name}}</li>
+          <li class="list-group-item">Address: {{ user.address}}</li>
+          <li class="list-group-item">Date Of Birth: {{ user.date_of_birth}}</li>
+          <li class="list-group-item">Started At: {{ user.start}}</li>
+          <li class="list-group-item">Gender: {{ user.get_gender_display }}</li>
+          <li class="list-group-item">Age: {{ user.age }}</li>
+          <li class="list-group-item">Salary: {{ user.salary }}</li>
+        </ul>
+        <a
+          hx-get="{% url 'create_user' %}" hx-target="#dialog"
+          href="#" class="btn btn-primary mt-3">
+          Edit
+        </a>
+        <div id="modal" class="modal fade">
+          <div id="dialog" class="modal-dialog" hx-target="this"></div>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="d-flex justify-content-between  h-50">
-    <div class="h-75 border rounded p-2" style='width: 45%'>
-      <h1>Salary</h1>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="bg-white p-4 mt-4 rounded " style="height: 95%">
+        {% include "settings/employee/tables/job_title_table.html" %}
+      </div>
     </div>
-    <div class="h-75 border rounded p-2" style='width: 45%'>
-      <h1>Job Title</h1>
+    <div class="col-md-6">
+      <div class="bg-white p-4 mt-4 rounded " style="height: 95%">
+        {% include "settings/employee/tables/salary_table.html" %}
+      </div>
     </div>
   </div>
+  <br>
 </div>
+
