--- a/templates/settings/settings.html
+++ b/templates/settings/settings.html
@@ -17,7 +17,7 @@
         hx-get="{% url "employee_list" %}"
         hx-target="#settings_content"
         hx-trigger="click"
-        hx-swap="innerHtml"
+        hx-swap="outerHtml"
         class="list-group-item list-group-item-action sidebar-item" style="cursor: pointer;">
         <i class="fa-solid fa-circle-plus" ></i>
         <span>Employee</span>
