--- a/templates/settings/employee/tables/salary_table.html
+++ b/templates/settings/employee/tables/salary_table.html
@@ -2,7 +2,7 @@
 <table class="table table-dark table-striped" id="sortable-table">
   <thead>
     <tr>
-      <th class="sortable">Job Title</th>
+      <th class="sortable">Salary</th>
       <th class="sortable">Start</th>
       <th class="sortable">End</th>
     </tr>
@@ -10,7 +10,7 @@
   <tbody>
     {% for salary in salary_history %}
     <tr>
-      <td>{{ salary.amount }}</td>
+      <td>{{ salary.amount }} EG</td>
       <td>{{ salary.start|date:"Y-m-d" }}</td>
       <td>{{ salary.end|date:"Y-m-d" }}</td>
     </tr>
