create the edit form of the user and userprofile at the modals

--- a/templates/base.html
+++ b/templates/base.html
@@ -93,6 +93,8 @@
             sidebar.classList.toggle('sidebar-minimized');
           }
         </script>
+        {% block script %}
+        {% endblock script %}
     </body>
   {% else %}
     {% load crispy_forms_tags %}
