--- a/templates/settings/employee/employee_detail.html
+++ b/templates/settings/employee/employee_detail.html
@@ -19,8 +19,9 @@
     </li>
 </ul>
 <div class="tab-content h-100" id="myTabContent">
-    <div class="tab-pane fade show active mt-4 h-100" id="home" role="tabpanel" aria-labelledby="home-tab">
-      {% include "settings/employee/tabs/info.html" %}
+    <div
+      hx-trigger="load, info from:body" hx-get="{% url 'info_refresh' user.user.id %}" hx-target="this"
+      class="tab-pane fade show active mt-4 h-100" id="home" role="tabpanel" aria-labelledby="home-tab">
     </div>
     <div class="tab-pane fade mt-4" id="profile" role="tabpanel" aria-labelledby="profile-tab">
       {% include "settings/employee/tabs/log.html" %}
