--- a/templates/settings/employee/tabs/info.html
+++ b/templates/settings/employee/tabs/info.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" >
   <div class="row">
     <div class="col-md-6">
       <div class="bg-white p-4 mt-4 rounded " style="height: 95%">
@@ -43,7 +43,7 @@
         </a>
 
         {% block modal %}
-        <div id="modal" class="modal fade">
+        <div id="info_modal" class="modal fade">
           <div id="dialog" class="modal-dialog" hx-target="this"></div>
         </div>
         {% endblock modal %}
@@ -68,20 +68,20 @@
 {% block script %}
   <script>
   // Define the modal
-  var modal = new bootstrap.Modal(document.getElementById("modal"));
+  var info_modal = new bootstrap.Modal(document.getElementById("info_modal"));
 
 
   htmx.on("htmx:afterSwap", (e) => {
     // Response targeting #dialog => show the modal
     if (e.detail.target.id == "dialog") {
-      modal.show();
+      info_modal.show();
     }
   });
 
   htmx.on("htmx:beforeSwap", (e) => {
     // Empty response targeting #dialog => hide the modal
     if (e.detail.target.id == "dialog" && !e.detail.xhr.response) {
-      modal.hide();
+      info_modal.hide();
       e.detail.shouldSwap = false;
     }
   });
