--- a/templates/settings/employee/tabs/log.html
+++ b/templates/settings/employee/tabs/log.html
@@ -1,5 +1,14 @@
-<div>
-    <h2>Tab Three Content</h2>
-    <p>This is the content of tab three.</p>
+<div class="container h-100" >
+  <div class="row h-100">
+    <div class="col-md-6">
+      <div class="bg-white p-4 mt-4 rounded " style="height: 95%">
+        {% include "settings/employee/tables/login_table.html" %}
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="bg-white p-4 mt-4 rounded " style="height: 95%">
+      </div>
+    </div>
+  </div>
+  <br>
 </div>
-
