--- a/templates/settings/employee/modals/reset_password.html
+++ b/templates/settings/employee/modals/reset_password.html
@@ -2,7 +2,7 @@
 <form hx-post="{{ request.path }}" class="modal-content" hx-trigger="submit">
   {% csrf_token %}
   <div class="modal-header">
-    <h5 class="modal-title">Create User</h5>
+    <h5 class="modal-title">Reset Password</h5>
   </div>
   <div class="modal-body">
     {{ form|crispy }}
