--- a/templates/settings/employee/tabs/log.html
+++ b/templates/settings/employee/tabs/log.html
@@ -6,7 +6,9 @@
       </div>
     </div>
     <div class="col-md-6">
-      <div class="bg-white p-4 mt-4 rounded " style="height: 95%">
+      <div
+        hx-trigger="load, login_time from:body" hx-get="{% url 'login_time' user.user.id %}" hx-target="this"
+        class="bg-white p-4 mt-4 rounded " style="height: 95%">
       </div>
     </div>
   </div>
