--- a/templates/settings/employee/tables/table.html
+++ b/templates/settings/employee/tables/table.html
@@ -26,9 +26,9 @@
   </td>
   <td>
     {% if user.user.is_active %}
-      <span style="color: #63E6BE;"> Active </span>
+      <span class="badge rounded-pill bg-success">Active</span>
     {% else %}
-      <span style="color: #e13333;"> Inactive </span>
+      <span class="badge rounded-pill bg-danger">Inactive</span>
     {% endif %}
   </td> 
 </tr>
