--- a/templates/settings/employee/cards.html
+++ b/templates/settings/employee/cards.html
@@ -3,7 +3,11 @@
       <div class="card-body text-white fs-5 ">
         <h5 class="card-title text-success m-0">Online</h5>
         <div class='d-flex justify-content-between pt-2'>
-          <p class="card-text ps-2"> {{ online }} </p>
+          {% if request.user.is_superuser %}
+            <p class="card-text ps-2"> {{ admin_online }} </p>
+          {% else %}
+            <p class="card-text ps-2"> {{ online }} </p>
+          {% endif %}
           <i class="fs-4 fa-solid fa-signal-bars" style="--fa-primary-color: #ffffff; --fa-secondary-color: #ffffff;"></i>
         </div>
       </div>
@@ -14,7 +18,11 @@
       <div class="card-body text-white fs-5 ">
         <h5 class="card-title text-success m-0">Activte</h5>
         <div class='d-flex justify-content-between pt-2'>
-          <p class="card-text ps-2"> {{ active }} </p>
+          {% if request.user.is_superuser %}
+            <p class="card-text ps-2"> {{ admin_active }} </p>
+          {% else %}
+            <p class="card-text ps-2"> {{ active }} </p>
+          {% endif %}
           <i class="fs-4 fa-solid fa-check" style="color: #ffffff;"></i>
         </div>
       </div>
@@ -25,7 +33,11 @@
       <div class="card-body text-white fs-5 ">
         <h5 class="card-title text-danger m-0">Offline</h5>
         <div class='d-flex justify-content-between pt-2'>
-          <p class="card-text ps-2"> {{ offline }} </p>
+          {% if request.user.is_superuser %}
+            <p class="card-text ps-2"> {{ admin_offline }} </p>
+          {% else %}
+            <p class="card-text ps-2"> {{ offline }} </p>
+          {% endif %}
           <i class="fs-4 fa-solid fa-signal-slash" style="--fa-primary-color: #ffffff; --fa-secondary-color: #ffffff;"></i>
         </div>
       </div>
@@ -36,7 +48,11 @@
       <div class="card-body text-white fs-5 ">
         <h5 class="card-title text-danger m-0">Inactive</h5>
         <div class='d-flex justify-content-between pt-2'>
-          <p class="card-text ps-2"> {{ inactive }} </p>
+          {% if request.user.is_superuser %}
+            <p class="card-text ps-2"> {{ admin_inactive }} </p>
+          {% else %}
+            <p class="card-text ps-2"> {{ inactive }} </p>
+          {% endif %}
           <i class="fs-4 fa-solid fa-xmark" style="color: #ffffff;"></i>
         </div>
       </div>
