--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,66 @@
-{% extends "base.html" %}
+{% extends 'layouts/blank.html' %}
 
-{% block title %}Home{% endblock title %}
-
-  {% block sidecontent %}
-    <div class="list-group text-nowrap">
-      {% for category in category_list %}
-        <a href="#" class="list-group-item list-group-item-action sidebar-item">
-          <i class="fa-solid fa-circle-plus"></i>
-          <span>{{ category.name }}</span>
-        </a>
-      {% endfor %}
-    </div>
-  {% endblock sidecontent %}
-
-  {% block content %}
-
-  {% endblock content %}
-
+{% block content %} 
+  <div class="p-4 sm:ml-64">
+     <div class="p-4 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700 mt-14">
+        <div class="grid grid-cols-3 gap-4 mb-4">
+           <div class="flex items-center justify-center h-24 rounded bg-gray-50 dark:bg-gray-800">
+              <p class="text-2xl text-gray-400 dark:text-gray-500">
+              </p>
+           </div>
+           <div class="flex items-center justify-center h-24 rounded bg-gray-50 dark:bg-gray-800">
+              <p class="text-2xl text-gray-400 dark:text-gray-500">
+              </p>
+           </div>
+           <div class="flex items-center justify-center h-24 rounded bg-gray-50 dark:bg-gray-800">
+              <p class="text-2xl text-gray-400 dark:text-gray-500">
+              </p>
+           </div>
+        </div>
+        <div class="flex items-center justify-center h-48 mb-4 rounded bg-gray-50 dark:bg-gray-800">
+           <p class="text-2xl text-gray-400 dark:text-gray-500">
+           </p>
+        </div>
+        <div class="grid grid-cols-2 gap-4 mb-4">
+           <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
+              <p class="text-2xl text-gray-400 dark:text-gray-500">
+              </p>
+           </div>
+           <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
+              <p class="text-2xl text-gray-400 dark:text-gray-500">
+              </p>
+           </div>
+           <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
+              <p class="text-2xl text-gray-400 dark:text-gray-500">
+              </p>
+           </div>
+           <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
+              <p class="text-2xl text-gray-400 dark:text-gray-500">
+              </p>
+           </div>
+        </div>
+        <div class="flex items-center justify-center h-48 mb-4 rounded bg-gray-50 dark:bg-gray-800">
+           <p class="text-2xl text-gray-400 dark:text-gray-500">
+           </p>
+        </div>
+        <div class="grid grid-cols-2 gap-4">
+           <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
+              <p class="text-2xl text-gray-400 dark:text-gray-500">
+              </p>
+           </div>
+           <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
+              <p class="text-2xl text-gray-400 dark:text-gray-500">
+              </p>
+           </div>
+           <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
+              <p class="text-2xl text-gray-400 dark:text-gray-500">
+              </p>
+           </div>
+           <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
+              <p class="text-2xl text-gray-400 dark:text-gray-500">
+              </p>
+           </div>
+        </div>
+     </div>
+  </div>
+{% endblock %}
