--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %}
-{% load crispy_forms_tags %}
+{% extends 'layouts/box.html' %}
+{% load tailwind_filters %}
 {% block title %} Log In {% endblock title %}
 
 {% block content %}
@@ -7,7 +7,9 @@
 <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-success"> Log In </button>
+    <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:outline-none 
+      focus:ring-4 focus:ring-blue-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 mt-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Log In</button>
 </form>
 <p><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
 {% endblock content %}
+
