--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,4 +1,4 @@
-<nav class="fixed top-0 z-50 w-full bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700">
+<nav class="fixed top-0 z-50 w-full bg-white border-b border-gray-200 dark:bg-gray-900 dark:border-gray-800">
   <div class="px-3 py-3 lg:px-5 lg:pl-3">
     <div class="flex items-center justify-between">
       <div class="flex items-center justify-start rtl:justify-end">
@@ -10,8 +10,9 @@
       <div class="flex items-center">
         <div class="flex items-center ms-3">
           <div>
-            <button type="button" class="flex text-sm bg-gray-800 rounded-full focus:ring-2 focus:ring-gray-300 dark:focus:ring-gray-600" 
-              aria-expanded="false" data-dropdown-toggle="dropdown-user">
+            <button type="button" class="flex text-sm rounded-full focus:ring focus:ring-gray-700 
+              focus:ring-offset-4 focus:ring-offset-gray-900 " aria-expanded="false" 
+              data-dropdown-toggle="dropdown-user">
               {% if user.is_authenticated %}
               <span class="sr-only">Open user menu</span>
               <i class="text-2xl rounded-full fas fa-user-alt" style="color: #FFF;"></i>
