--- a/templates/layouts/blank.html
+++ b/templates/layouts/blank.html
@@ -2,7 +2,7 @@
 
 {% block layout %}
 
-<content class="block w-full">
+<content class="block w-full bg-gray-500">
   {% block content %}
   {% endblock %}
 
