--- a/templates/base.html
+++ b/templates/base.html
@@ -74,9 +74,8 @@
           </div>
       </aside>
     {% endif %}
-    {% block layout %}
-    {% endblock layout%}
-    {% block javascript %}{% endblock javascript%}
+    {% block content %}
+    {% endblock content %}
 
     <script src="{% static 'js/all.min.js' %}"></script>
     <script src="{% static 'js/htmx.min.js' %}"></script>
