--- a/templates/settings/employee/cards.html
+++ b/templates/settings/employee/cards.html
@@ -1,61 +1,31 @@
-<div class="col mb-3">
-  <div class="card bg-dark pb-2" style="border-left: 3px solid #28a745;">
-      <div class="card-body text-white fs-5 ">
-        <h5 class="card-title text-success m-0">Online</h5>
-        <div class='d-flex justify-content-between pt-2'>
-          {% if request.user.is_superuser %}
-            <p class="card-text ps-2"> {{ admin_online }} </p>
-          {% else %}
-            <p class="card-text ps-2"> {{ online }} </p>
-          {% endif %}
-          <i class="fs-4 fa-solid fa-signal-bars" style="--fa-primary-color: #ffffff; --fa-secondary-color: #ffffff;"></i>
-        </div>
-      </div>
+<div class="grid sm:grid-cols-2 md:grid-cols-4 gap-4 mb-4">
+  <div class="h-28 rounded bg-gray-50 dark:bg-gray-800 border-l-4 border-green-500 p-4">
+    <span class="text-green-500 font-bold text-2xl ">Online</span>
+    <span class="flex justify-between items-center text-white  pt-4 px-2">
+      <p class="text-xl">{{ online }}</p>
+      <i class="text-2xl fa-solid fa-signal-bars"></i>
+    </span>
   </div>
-</div>
-<div class="col mb-3">
-  <div class="card bg-dark pb-2" style="border-left: 3px solid #28a745;">
-      <div class="card-body text-white fs-5 ">
-        <h5 class="card-title text-success m-0">Activte</h5>
-        <div class='d-flex justify-content-between pt-2'>
-          {% if request.user.is_superuser %}
-            <p class="card-text ps-2"> {{ admin_active }} </p>
-          {% else %}
-            <p class="card-text ps-2"> {{ active }} </p>
-          {% endif %}
-          <i class="fs-4 fa-solid fa-check" style="color: #ffffff;"></i>
-        </div>
-      </div>
+  <div class="h-28 rounded bg-gray-50 dark:bg-gray-800 border-l-4 border-green-500 p-4">
+    <span class="text-green-500 font-bold text-2xl ">Active</span>
+    <span class="flex justify-between items-center text-white  pt-4 px-2">
+      <p class="text-xl">{{ active }}</p>
+      <i class="text-2xl fa-solid fa-check"></i>
+    </span>
   </div>
-</div>
-<div class="col mb-3">
-  <div class="card bg-dark pb-2" style="border-left: 3px solid #DC4C64;">
-      <div class="card-body text-white fs-5 ">
-        <h5 class="card-title text-danger m-0">Offline</h5>
-        <div class='d-flex justify-content-between pt-2'>
-          {% if request.user.is_superuser %}
-            <p class="card-text ps-2"> {{ admin_offline }} </p>
-          {% else %}
-            <p class="card-text ps-2"> {{ offline }} </p>
-          {% endif %}
-          <i class="fs-4 fa-solid fa-signal-slash" style="--fa-primary-color: #ffffff; --fa-secondary-color: #ffffff;"></i>
-        </div>
-      </div>
+  <div class="h-28 rounded bg-gray-50 dark:bg-gray-800 border-l-4 border-red-500 p-4">
+    <span class="text-red-500 font-bold text-2xl ">Offline</span>
+    <span class="flex justify-between items-center text-white  pt-4 px-2">
+      <p class="text-xl">{{ offline }}</p>
+      <i class="text-2xl fa-solid fa-check"></i>
+    </span>
   </div>
-</div>
-<div class="col mb-3">
-  <div class="card bg-dark pb-2" style="border-left: 3px solid #DC4C64;">
-      <div class="card-body text-white fs-5 ">
-        <h5 class="card-title text-danger m-0">Inactive</h5>
-        <div class='d-flex justify-content-between pt-2'>
-          {% if request.user.is_superuser %}
-            <p class="card-text ps-2"> {{ admin_inactive }} </p>
-          {% else %}
-            <p class="card-text ps-2"> {{ inactive }} </p>
-          {% endif %}
-          <i class="fs-4 fa-solid fa-xmark" style="color: #ffffff;"></i>
-        </div>
-      </div>
+  <div class="h-28 rounded bg-gray-50 dark:bg-gray-800 border-l-4 border-red-500 p-4">
+    <span class="text-red-500 font-bold text-2xl ">Inactive</span>
+    <span class="flex justify-between items-center text-white  pt-4 px-2">
+      <p class="text-xl">{{ inactive }}</p>
+      <i class="text-2xl fa-solid fa-check"></i>
+    </span>
   </div>
 </div>
 
