add update the table of the employees

--- a/templates/settings/settings.html
+++ b/templates/settings/settings.html
@@ -6,9 +6,9 @@
       dark:hover:bg-gray-700 group">
       <span class="inline-block w-5 h-5 text-gray-500 transition duration-75 
         dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
-        <i class="text-xl fa-solid fa-circle-plus"></i>
+        <i class="text-2xl fa-solid fa-circle-plus"></i>
       </span>
-        <span class="ms-5 text-gray-300 ">Employee</span>
+        <span class="ms-5 text-gray-300 text-xl">Employee</span>
     </a>
   </li>
 {% endblock sidecontent %}
