--- a/templates/settings/employee/tables/table.html
+++ b/templates/settings/employee/tables/table.html
@@ -1,75 +1,47 @@
-{% if request.user.is_superuser %}
-  {% for user in userprofile_list %}
-    <tr>
-      <td>{{ user.id }}</td>
-      <td>
-        <div 
-          hx-get="{% url "employee_detail" user.id %}"
-          hx-target="#settings_content"
-          hx-trigger="click"
-          hx-swap="innerHtml"
-          style="cursor: pointer;">
-          <span class="fw-bold">{{ user.user.username }}</span> </div>
-      </td>
-      <td>{{ user.user.first_name }} {{ user.user.last_name }}</td>
-      <td>{{ user.age }}</td>
-      <td>{{ user.get_gender_display }}</td>
-      <td>{{ user.job_title }}</td>
-      <td>{{ user.salary }} EG</td>
-      <td>
-        {% if user.user.username in login_history %}
-          <i class="fa-solid fa-circle" style="color: #63E6BE;"></i>
-          <span style="color: #63E6BE;"> Online </span>
-        {% else %}
-          <i class="fa-solid fa-circle" style="color: #e13333;"></i>
-          <span style="color: #e13333;"> Offline </span>
-        {% endif %}
-      </td>
-      <td>
-        {% if user.user.is_active %}
-          <span class="badge rounded-pill bg-success">Active</span>
-        {% else %}
-          <span class="badge rounded-pill bg-danger">Inactive</span>
-        {% endif %}
-      </td> 
-    </tr>
-  {% endfor %}
-{% else %}
-  {% for user in userprofile_list %}
-    {% if not user.user.is_superuser %}
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+  <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+    <thead class="text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
       <tr>
-        <td>{{ user.id }}</td>
-        <td>
-          <div 
-            hx-get="{% url "employee_detail" user.id %}"
-            hx-target="#settings_content"
-            hx-trigger="click"
-            hx-swap="innerHtml"
-            style="cursor: pointer;">
-            <span class="fw-bold">{{ user.user.username }}</span> </div>
-        </td>
-        <td>{{ user.user.first_name }} {{ user.user.last_name }}</td>
-        <td>{{ user.age }}</td>
-        <td>{{ user.get_gender_display }}</td>
-        <td>{{ user.job_title }}</td>
-        <td>{{ user.salary }} EG</td>
-        <td>
-          {% if user.user.username in login_history %}
-            <i class="fa-solid fa-circle" style="color: #63E6BE;"></i>
-            <span style="color: #63E6BE;"> Online </span>
-          {% else %}
-            <i class="fa-solid fa-circle" style="color: #e13333;"></i>
-            <span style="color: #e13333;"> Offline </span>
-          {% endif %}
-        </td>
-        <td>
-          {% if user.user.is_active %}
-            <span class="badge rounded-pill bg-success">Active</span>
-          {% else %}
-            <span class="badge rounded-pill bg-danger">Inactive</span>
-          {% endif %}
-        </td> 
+        <th scope="col" class="px-6 py-3">Id</th>
+        <th scope="col" class="px-6 py-3">Username</th>
+        <th scope="col" class="px-6 py-3">Name</th>
+        <th scope="col" class="px-6 py-3">Age</th>
+        <th scope="col" class="px-6 py-3">Gender</th>
+        <th scope="col" class="px-6 py-3">Salary</th>
+        <th scope="col" class="px-6 py-3">Job Title</th>
+        <th scope="col" class="px-6 py-3">O/F</th>
+        <th scope="col" class="px-6 py-3">Active</th>
       </tr>
-    {% endif %}
-  {% endfor %}
-{% endif %}
+    </thead>
+    <tbody>
+      {% for user in userprofile_list %}
+      <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
+        <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white text-lg">{{ user.user.id }}</th>
+        <td class="px-6 py-4 text-base">{{ user.user.username }}</td>
+        <td class="px-6 py-4 text-base">{{ user.user.first_name }} {{ user.user.last_name }}</td>
+        <td class="px-6 py-4 text-base">{{ user.age }}</td>
+        <td class="px-6 py-4 text-base">{{ user.get_gender_display }}</td>
+        <td class="px-6 py-4 text-base">{{ user.salary }}</td>
+        <td class="px-6 py-4 text-base">{{ user.job_title }}</td>
+        <td class="px-6 py-4 text-base">
+          <div class="flex items-center">
+            {% if user.user.username in login_history %}
+            <div class="h-2.5 w-2.5 rounded-full bg-green-500 me-2"></div> Online
+            {% else %}
+            <div class="h-2.5 w-2.5 rounded-full bg-red-500 me-2"></div> Offline
+            {% endif %}
+          </div>
+        </td>
+        <td class="px-6 py-4 text-base">
+          {% if user.user.is_active %}
+          <span class="bg-red-100 text-green-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-green-600 dark:text-gray-100">Active</span>
+          {% else %}
+          <span class="bg-red-100 text-red-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-red-700 dark:text-gray-100">Inactive</span>
+          {% endif %}
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
+
